[package]
name = "rustivitypub-types"
version = "0.0.1"
authors = ["YOSHIOKA Takuma <lo48576@hard-wi.red>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Type definitions for rustivitypub"
repository = "https://github.com/lo48576/rustivitypub-types"
keywords = ["ActivityPub"]

[dependencies]
opaque_typedef = "^0.0.3"
opaque_typedef_macros = "^0.0.3"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^1.7"

[badges]
travis-ci = { repository = "lo48576/rustivitypub-types" }
